# TDA283-compiler-construction

./: .gitignore  Makefile  README.md  Tests.py  build.gradle  settings.gradle
doc/: README.html  README.md  bnfc.md
grade/: Grade  Grade.hs  KompTest.hs  Main.hs  Makefile  RunCommand.hs  grade.cabal  jlctests.cabal
lib/: runtime.bc
src/: CliOptions.hs  Jlc.cabal  Jlc.hs  Makefile
src/Backend/: AlphaRename.hs  Example.hs  PreGen.hs  PreOpt.hs  PreOptimize.hs
src/Backend/LLVM/: AST.hs  CodeComplex.hs  CodeDSL.hs  CodeExpr.hs  CodeGen.hs  Environment.hs  JRuntime.hs  LLVM.hs  LLVMApi.hs  LLVMAst.hs  LLVMGen.hs  Print.hs  Types.hs
src/Common/: AST.hs  ASTOps.hs  Annotations.hs  Computation.hs  FileOps.hs  Options.hs  Sandbox.hs  StateOps.hs  Uniplate.hs
src/Frontend/: Annotations.hs  Common.hs  Computation.hs  Environment.hs  Error.hs  Error2.hs  Example.hs  ParseLex.hs  Query.hs  ReturnCheck.hs  TypeCheck.hs  TypeFunSig.hs  TypeInfer.hs  Typecheck2.hs  Types.hs
src/Utils/: Debug.hs  Error.hs  Foldable.hs  Function.hs  Graph.hs  GraphFlip.hs  List.hs  Monad.hs  Pointless.hs  RSEWT.hs  Shallow.hs  Sizeables.hs  Terminal.hs
src/contrib/: Javalette.cf  runtime.ll  test.jl
src/main/: Jlc.hs  jlc.hs
submission/: jlc
