name:                Grade
version:             0.1.0.0
synopsis:            Grade tester for TDA283 @ chalmers
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

executable Grade
  main-is:           Main.hs
  other-extensions:    NamedFieldPuns, ScopedTypeVariables
  build-depends:       base >=4.8 && <4.9, process >=1.2 && <1.3, directory >=1.2 && <1.3, filepath >=1.4 && <1.5
  default-language:    Haskell2010