name:                    jlc
version:                 0.2.0.0
synopsis:                Javalette Compiler written in Haskell
description:             Javalette Compiler written in Haskell
license:                 GPL-2
license-file:            ../LICENSE.md
author:                  Björn Tropf, Mazdak Farrokhzad
maintainer:              Björn Tropf, Mazdak Farrokhzad
copyright:               Copyright, 2016,
                         Björn Tropf, Mazdak Farrokhzad
category:                Compiler
build-type:              Simple
cabal-version:           >=1.10

executable jlc
    main-is:             Jlc.hs
    other-extensions:    CPP, MagicHash
    build-depends:       base >=4.8 && <4.9, array >=0.4 && <0.6, 
                         mtl, containers, lens, safe == 0.3.9,
                         pretty, haskell-src-exts, uniplate
    build-tools:         alex, happy
    default-language:    Haskell2010
    ghc-options:         -O2 -Wall