name:                    jlc
version:                 0.4.0.0
synopsis:                Javalette Compiler written in Haskell
description:             Javalette Compiler written in Haskell
license:                 GPL-2
license-file:            ../LICENSE.md
author:                  Björn Tropf, Mazdak Farrokhzad
maintainer:              Björn Tropf, Mazdak Farrokhzad
copyright:               Copyright, 2016,
                         Björn Tropf, Mazdak Farrokhzad
category:                Compiler
build-type:              Simple
cabal-version:           >=1.10

executable jlc
    main-is:             Jlc.hs
    other-extensions:    CPP, MagicHash
    build-depends:       safe == 0.3.*
                       , base == 4.8.*
                       , array == 0.5.*
                       , mtl == 2.2.*
                       , containers == 0.5.*
                       , mmorph == 1.0.*
                       , transformers == 0.4.*
                       , fgl == 5.5.*
                       , lens == 4.13.*
                       , uniplate == 1.6.*
                       , process == 1.2.*
                       , directory == 1.2.*
                       , temporary == 1.2.*
                       , optparse-applicative == 0.12.*
                       , ansi-wl-pprint == 0.6.*
                       , filepath == 1.4.*
                       , pretty == 1.1.*
                       , haskell-src-exts == 1.17.*
    build-tools:         alex, happy
    default-language:    Haskell2010
    ghc-options:         -O2 -Wall